# tabsage

./: .dockerignore  .env.example  .gitignore  Dockerfile.agent  Dockerfile.bot  Dockerfile.web  PROJECT_STRUCTURE.md  README.md  cloudbuild.yaml  deploy.sh  deploy_cloud_run.sh  pyproject.toml  requirements.txt  run_agent_server.py  run_bot.py  run_evaluations.py  run_tests.sh  run_web.py  run_with_observability.py
agents/: __init__.py  audio_producer_a2a_agent.py  audio_producer_agent.py  editor_a2a_agent.py  editor_agent.py  evaluator_a2a_agent.py  evaluator_agent.py  guest_a2a_agent.py  guest_agent.py  ingest_agent.py  ingest_agent_a2a.py  intent_agent.py  kg_builder_a2a_agent.py  kg_builder_agent.py  publisher_a2a_agent.py  publisher_agent.py  scriptwriter_a2a_agent.py  scriptwriter_agent.py  summary_agent.py  topic_discovery_a2a_agent.py  topic_discovery_agent.py
core/: config.py  orchestrator.py  orchestrator_a2a.py
docs/: A2A_REGISTRY_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  CLOUD_RUN_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_QUICK_START.md  EVALUATION_GUIDE.md  INSTALL.md  MEMORY_AND_WORKFLOWS_GUIDE.md  OBSERVABILITY_GUIDE.md  PERFORMANCE_METRICS.md  PODCAST_GENERATION.md  REPROCESS_ARTICLES.md  SCRIPTS_USAGE.md
evaluation/: __init__.py  regression.py  runner.py
evaluators/: __init__.py  audio_evaluator.py  text_evaluator.py
examples/: a2a_pipeline_example.py  complete_pipeline_example.py  export_kg.py  full_a2a_pipeline_example.py  full_pipeline_example.py  kg_builder_example.py  orchestrator_example.py  process_urls.py  (+3 more)
(+81 files in other folders)
