[project]
name = "tabsage"
version = "0.1.0"
description = "AI Knowledge Graph Podcaster"
requires-python = ">=3.9"
dependencies = [
    "google-adk",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "python-telegram-bot>=20.0",
    "google-cloud-firestore>=2.11.0",
    "google-cloud-discoveryengine>=0.11.0",
    "google-cloud-aiplatform>=1.0.0",
    "google-cloud-texttospeech>=2.16.0",
    "vertexai>=1.0.0",
    "flask>=2.0.0",
    "numpy>=1.24.0",
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.21.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.24.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "agents",
    "tools",
    "storage",
    "schemas",
    "services",
    "services.a2a",
    "services.bot",
    "services.web",
    "core",
    "observability",
    "memory",
    "workflows",
    "registry",
    "search",
    "evaluation",
    "evaluators",
]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

